--- a/museo-sans-500-italic.css
+++ b/museo-sans-500-italic.css
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: 'museo_sans500_italic';
+  font-family: 'Museo Sans';
   src: url('fonts/museosans_500_italic-webfont.eot');
   src: url('fonts/museosans_500_italic-webfont.eot?#iefix') format('embedded-opentype'),
        url('fonts/museosans_500_italic-webfont.woff') format('woff'),
        url('fonts/museosans_500_italic-webfont.ttf') format('truetype'),
        url('fonts/museosans_500_italic-webfont.svg#museo_sans500_italic') format('svg');
-  font-weight: normal;
-  font-style: normal;
+  font-weight: 500;
+  font-style: italic;
 }
